--- a/public/styles/output.css
+++ b/public/styles/output.css
@@ -1466,6 +1466,12 @@ video {
   }
 }
 
+@media screen and (min-width: 1000px){
+  .signUpMainDiv {
+    height: 80%
+  }
+}
+
 .checked\:bg-black:checked{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1573,6 +1579,10 @@ video {
     width: 66.666667%;
   }
 
+  .xs\:w-3\/4{
+    width: 75%;
+  }
+
   .xs\:w-40{
     width: 10rem;
   }
@@ -1589,20 +1599,8 @@ video {
     width: 20rem;
   }
 
-  .xs\:w-96{
-    width: 24rem;
-  }
-
   .xs\:w-full{
     width: 100%;
-  }
-
-  .xs\:w-1\/3{
-    width: 33.333333%;
-  }
-
-  .xs\:w-3\/4{
-    width: 75%;
   }
 
   .xs\:grid-cols-1{
@@ -1716,10 +1714,6 @@ video {
       flex-direction: column;
     }
 
-    .xs\:max-md\:items-center{
-      align-items: center;
-    }
-
     .xs\:max-md\:gap-5{
       gap: 1.25rem;
     }
@@ -1729,18 +1723,10 @@ video {
     .xs\:max-sm\:absolute{
       position: absolute;
     }
-
-    .xs\:max-sm\:items-center{
-      align-items: center;
-    }
   }
 }
 
 @media (min-width: 640px){
-  .sm\:m-16{
-    margin: 4rem;
-  }
-
   .sm\:m-12{
     margin: 3rem;
   }
@@ -1866,6 +1852,10 @@ video {
     height: 40rem;
   }
 
+  .md\:w-1\/3{
+    width: 33.333333%;
+  }
+
   .md\:w-2\/3{
     width: 66.666667%;
   }
@@ -1880,10 +1870,6 @@ video {
 
   .md\:w-popularCar{
     width: 50rem;
-  }
-
-  .md\:w-1\/3{
-    width: 33.333333%;
   }
 
   .md\:flex-row{
